# software-rasterizer

./: CMakeLists.txt  DisplayWindow.cpp  DisplayWindow.h  README.md  Rasterizer.cpp  Rasterizer.h  RendererWireframe.cpp  RendererWireframe.h  TGAImage.cpp  TGAImage.h  Types.h  Utils.cpp  Utils.h  main.cpp
